Update 'we93sg4uk-java-springboot' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a0f828107e.89uz.p3.openshiftapps.com/rhtap/rhtap-qe:github-a85f5b7629a5f2d9f13ebfe5a8a905d647970c9c

--- a/components/we93sg4uk-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/we93sg4uk-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: we93sg4uk-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-a0f828107e.89uz.p3.openshiftapps.com/rhtap/rhtap-qe:github-a85f5b7629a5f2d9f13ebfe5a8a905d647970c9c
+          name: container-image
